added more routes and new dependencies for middlewares
